# primitive-types

./: .gitignore  .mypy.ini  LICENSE  __init__.py  pyproject.toml
src/primitivetypes/: base.py  export.py  nodes.py
