[project]
name = "primitive-types"
description = "This repository contains typed primitives for ComfyUI. The motivation for these primitives is that the standard primitive node cannot be routed."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/drustan-hawk/primitive-types"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "primitive-types"
Icon = ""
